--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <body>
         <h1>Listagem de Carros com Mustache</h1>
-        <table id="mytable" class="table table-bordered">
+        <table border="1px" id="mytable" class="table table-bordered">
             <thead>
                 <tr>
                     <th>Código</th>
@@ -48,6 +48,6 @@
             {{/itens}}
         </script>
         <!-- Fim Mustache Template -->
-        <script src="script.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
